# camera_apps_msgs

./: CMakeLists.txt  compile_commands.json  package.xml
msg/: BoundingBox.msg  Mask.msg  Masks.msg  ObjectInfo.msg  ObjectState.msg  ObjectStates.msg  ObjectsInfo.msg  example.msg
