<?xml version="1.0"?>
<package format="2">
  <name>camera_apps_msgs</name>
  <version>0.0.0</version>
  <description>The camera_apps_msgs package</description>

  <maintainer email="horiike@todo.todo">horiike</maintainer>


  <license>TODO</license>


  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
